# Gmail-Insighter

./: .gitignore  README.md  agent.py  cache.py  config.py  main.py  mcp_server.py  pyproject.toml  settings.py
logger/: app_logger.py
